# CPlusPlus-minimals

Excersizes/exc14_1_inheritence/: exc14_1_inheritence.cpp  exc14_1_inheritence.sln  exc14_1_inheritence.vcxproj  exc14_1_inheritence.vcxproj.filters
Excersizes/exc14_2/: exc14_2.cpp  exc14_2.vcxproj  exc14_2.vcxproj.filters
Excersizes/exc14_3/: exc14_3.cpp  exc14_3.vcxproj  exc14_3.vcxproj.filters
Excersizes/exc14_4/: exc14_4.cpp  exc14_4.vcxproj  exc14_4.vcxproj.filters
Memoize/: CMakeLists.txt  Memoize.cpp  Memoize.h
lower_upper_bound/: lower_upper_bound.cpp  lower_upper_bound.sln  lower_upper_bound.vcxproj  lower_upper_bound.vcxproj.filters
sizeof/: sizeof.cpp  sizeof.sln  sizeof.vcxproj
smart_pointers/: CMakeLists.txt
smart_pointers/smart_pointers/: CMakeLists.txt  shared_pointer.h  smart_pointers.cpp  smart_pointers.h  unique_pointer.cpp  unique_pointer.h  weak_pointer.h
